# api

./: Cargo.toml  README.md
src/: error.rs  main.rs  prelude.rs
src/routes/: auth.rs  health.rs
src/routes/auth/: add.rs  authenticate.rs  delete.rs  disable.rs  link.rs  refresh.rs  register.rs  remove.rs  unlink.rs  update.rs
